<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_create_event"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.app.groupproject.unisocial.ActivityPages.CreateEventActivity">

        <ImageView
            android:id="@+id/imageview_id"
            android:layout_width="190dp"
            android:layout_height="160dp"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/picture_frame"/>

        <Button
            android:id="@+id/BrowseImage_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageview_id"
            android:layout_marginBottom="60dp"
            android:layout_marginStart="10dp"
            android:text="@string/Browse_Image" />

        <Button
            android:id="@+id/UploadImage_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageview_id"
            android:layout_below="@id/BrowseImage_button_id"
            android:layout_marginStart="10dp"
            android:text="@string/Upload_Image" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageview_id"
            android:text="@string/Title"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/Title_field_id"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_below="@id/Title"
            android:inputType="textCapSentences"
            android:maxLength="30"/>

        <TextView
            android:id="@+id/Host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Title_field_id"
            android:text="@string/Host"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Time"
            android:textStyle="bold"
            android:layout_below="@+id/Host_field_id"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date"
            android:textStyle="bold"
            android:layout_below="@+id/Time_field_id"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Location"
            android:textStyle="bold"
            android:layout_below="@+id/Date_field_id"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/Location_field_id"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_below="@id/Location"
            android:inputType="textCapSentences"
            android:maxLength="30"/>

        <TextView
            android:id="@+id/Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Description"
            android:textStyle="bold"
            android:layout_below="@+id/Location_field_id"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/Description_field_id"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:maxHeight="140dp"
            android:layout_below="@id/Description"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:gravity="top|start"
            />

        <TextView
            android:id="@+id/No_of_Students"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No_of_students"
            android:textStyle="bold"
            android:layout_below="@+id/Description_field_id"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/No_of_students_field_id"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/No_of_Students"
            android:inputType="number"
            android:maxLength="3"/>

        <Button
            android:id="@+id/Submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/No_of_students_field_id"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/Submit" />

        <EditText
            android:id="@+id/Host_field_id"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:inputType="textCapSentences"
            android:maxLength="30"
            android:layout_below="@+id/Host"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/Time_field_id"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:hint="@string/TimeFormatHint"
            android:inputType="time"
            android:maxLength="5"
            android:layout_below="@+id/Time"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/Date_field_id"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:hint="@string/DateFormatHint"
            android:inputType="date"
            android:maxLength="8"
            android:layout_below="@+id/Date"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</ScrollView>