<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_create_event"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.app.groupproject.unisocial.ActivityPages.CreateEventActivity">


        <ImageView
            android:id="@+id/eventinfo_image_id"
            android:layout_width="190dp"
            android:layout_height="160dp"
            android:background="@android:drawable/picture_frame"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eventinfo_image_id"
            android:text="@string/Title"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/eventinfo_title_id"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_below="@id/Title"
            android:maxLength="30"/>

        <TextView
            android:id="@+id/Host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/eventinfo_title_id"
            android:text="@string/Host"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Time"
            android:textStyle="bold"
            android:layout_below="@+id/eventinfo_host_id"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Date"
            android:textStyle="bold"
            android:layout_below="@+id/eventinfo_time_id"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Location"
            android:textStyle="bold"
            android:layout_below="@+id/eventinfo_date_id"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/eventinfo_location_id"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_below="@id/Location"
            android:maxLength="30"/>

        <TextView
            android:id="@+id/eventinfo_description_id"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:maxHeight="140dp"
            android:layout_below="@id/Description"
            android:layout_toRightOf="@id/eventinfo_image_id"
            android:scrollbars="vertical"
            android:gravity="top|start"
            />

        <TextView
            android:id="@+id/No_of_Students"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No_of_students"
            android:textStyle="bold"
            android:layout_below="@+id/eventinfo_location_id"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/eventinfo_noStudents_id"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/No_of_Students"
            android:maxLength="3"/>

        <Button
            android:id="@+id/joinchatRoom_btn_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/eventinfo_noStudents_id"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="Join ChatRoom" />

        <TextView
            android:id="@+id/eventinfo_host_id"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:maxLength="30"
            android:layout_below="@+id/Host"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/eventinfo_time_id"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:hint="@string/TimeFormatHint"
            android:maxLength="5"
            android:layout_below="@+id/Time"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/eventinfo_date_id"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:hint="@string/DateFormatHint"
            android:maxLength="8"
            android:layout_below="@+id/Date"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Description"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="14dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/eventinfo_image_id" />


    </RelativeLayout>
</ScrollView>