<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_create_event"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.app.groupproject.unisocial.ActivityPages.RegisterActivity">

        <ImageView
            android:id="@+id/profileimage_id"
            android:layout_width="190dp"
            android:layout_height="160dp"
            android:layout_marginBottom="10dp"
            android:background="@android:drawable/picture_frame"/>

        <Button
            android:id="@+id/BrowseProfileImage_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profileimage_id"
            android:layout_marginBottom="60dp"
            android:layout_marginStart="10dp"
            android:text="@string/Browse_Image" />

        <Button
            android:id="@+id/UploadImage_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profileimage_id"
            android:layout_below="@id/BrowseProfileImage_button_id"
            android:layout_marginStart="10dp"
            android:text="@string/Upload_Image" />

        <EditText
            android:id="@+id/age_field_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="140dp"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:gravity="top|start"
            android:layout_below="@+id/age"
            />

        <EditText
            android:id="@+id/number_field_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/number"
            android:inputType="number"
            android:maxLength="11"/>

        <Button
            android:id="@+id/register_button_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/number_field_id"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="Register" />

        <TextView
            android:id="@+id/Gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_below="@+id/reenter_password_field_id"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_below="@+id/gender_options_id"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/username_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_below="@+id/fullName_field_id"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Number"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_below="@+id/university_field_id"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/Email_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_below="@+id/username_field_id"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/fullName_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Full Name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_below="@+id/profileimage_id"
            android:layout_alignEnd="@+id/username_id" />

        <EditText
            android:id="@+id/fullName_field_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textCapWords"
            android:maxLength="30"
            android:layout_below="@+id/fullName_id"
            android:layout_alignStart="@+id/fullName_id" />

        <EditText
            android:id="@+id/username_field_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textCapSentences"
            android:maxLength="30"
            android:layout_below="@+id/username_id"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/Email_field_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:layout_below="@+id/Email_id"
            android:layout_alignStart="@+id/fullName_field_id" />

        <TextView
            android:id="@+id/Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_below="@+id/Email_field_id"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/password_field_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:layout_below="@+id/Password"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/Reenter_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Re-enter Password"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_below="@+id/password_field_id"
            android:layout_alignStart="@+id/Email_field_id" />

        <EditText
            android:id="@+id/reenter_password_field_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:maxLength="8"
            android:layout_below="@+id/Reenter_password"
            android:layout_alignParentStart="true" />

        <Spinner
            android:id="@+id/gender_options_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:maxLength="30"
            android:layout_below="@+id/Gender"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/university_field_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textCapWords"
            android:maxLength="30"
            android:layout_below="@+id/university"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/university"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="University"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_below="@+id/age_field_id"
            android:layout_alignEnd="@+id/username_id" />


    </RelativeLayout>
</ScrollView>